descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2012-02-XX  Release 7.21.X                                     ---
----------------------------------------------------------------------

* added a basic SWIG spec file - Erik Greenwald
* fixed highlighting of related objects in Archer treeview - B. Parker
* fixed error handling input reading failure in burst - Sean Morrison
* fixed memory double-freeing issue in shp-g - Erik Greenwald
* added optional scaling parameter to autoview command - Sean Morrison
* fixed extrude object bug rendering at near right angles - Bob Parker
* added -h option to nirt to suppress header printing - Cliff Yapp
* fixed nirt attribute reporting for specified attributes - Cliff Yapp
* fixed ebm/dsp/vol/hf corruption on 64-bit big endian - Sean Morrison
* fixed step-g importer memory management issues - Keith Bowman
* improved tab-completion behavior for mged and archer - Sean Morrison
* fixed pervasive string handling memory leak - Tom Browder
* improved table output formatting for 'analyze' command - Tom Browder
* upgraded libpng to 1.5.7 - Cliff Yapp
* fixed rtweight to handle incorrect lines - Tom Browder
* fixed crash in anim_cascade animation tool - Nick Reed
* fixed bug in gif2fb processing non-interlaced images - Sean Morrison
* fixed crash in coil when using -S and -l options - Cliff Yapp
* fixed nirt memory leak and scriptfile off-by-one bug - Sean Morrison
* d2-c now handles the imaginary part correctly - Erik Greenwald
* fixed rt* crash when output file cannot be created - Erik Greenwald
* fixed mged bot editor inoperative bug (3392650) - Tom Browder
* fixed mged solids/regions cmds core dump bug (3392558) - Tom Browder
* fixed mged bug setting color via Combination Editor - Nicholas Reed
* fixed crash during rt -c "ae 35 25" view change - Bob Parker